fix non-centred alignement of the whole game window in the mobile view

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -39,7 +39,7 @@ header h1{
 .full-page-container {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   align-items: center;
   justify-content: center;
 }
